too long flynote chain was causing a UI issue on teh table and even the displaying

--- a/peachjam/static/stylesheets/components/_text.scss
+++ b/peachjam/static/stylesheets/components/_text.scss
@@ -10,22 +10,29 @@ ul.flynotes > li {
 }
 
 .flynote-chain-separator {
-  padding: 0 0.25rem;
+  white-space: nowrap;
 }
 
 .flynote-chain {
-  display: inline-grid;
-  grid-template-columns: max-content minmax(0, 1fr);
   max-width: 100%;
+  overflow-wrap: normal;
   text-indent: 0;
-  vertical-align: top;
 }
 
+.flynote-chain-prefix,
 .flynote-chain-tail {
   text-indent: 0;
 }
 
-.flynote-chain-tail > ul.flynotes > li {
+.flynote-chain-tail {
+  overflow-wrap: anywhere;
+}
+
+.flynote-chain-children {
+  margin-left: min(var(--flynote-child-indent), 40ch);
+}
+
+.flynote-chain-children ul.flynotes > li {
   overflow-wrap: anywhere;
 }
 
